Re-position header image to prevent gap on mobile
Below about 480px, it was pushing down below the topbar - fixed that.

--- a/less/style.less
+++ b/less/style.less
@@ -176,7 +176,7 @@ section > p > a {
 
 #top {
   background-image: url('/img/img_header.jpg');
-  background-position: 60% 65%;
+  background-position: 60% 40%;
   background-repeat: no-repeat;
   background-size: 200%;
   color: white;
